--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,19 @@
+@font-face {
+font-family: 'FIFA Welcome';
+font-style: normal;
+font-weight: normal;
+src: local('FIFA Welcome'), url('fifawelcome1.3.woff') format('woff');
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-    -webkit-animation: rotation 6s infinite linear;
-    opacity: 0.1;
+body{
+  background: linear-gradient(top,rgba(18, 47, 24,1)0%,rgba(100, 200, 131,1) 100%);
+  font-family: sans-serif;
 }
 
-@-webkit-keyframes rotation {
-    from {
-        -webkit-transform: rotate(0deg);
-       -webkit-transform-origin: 20% 20%;
-    }
-    to {
-        -webkit-transform: rotate(-359deg);
-        -webkit-transform-origin: 20% 20%;
-    }
-}
-
-.App-header {
-  background-color: white;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+h1{
+  font-family: FIFA Welcome;
 }
