--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,5 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Courier New",Courier, monospace;
-  background: linear-gradient(top,rgba(18, 47, 24,1)0%,rgba(100, 200, 131,1) 100%);
+  background: linear-gradient(to bottom ,rgba(18, 47, 24,1)0%,rgba(100, 200, 131,1) 100%);
 }
