--- a/src/containers/Header.css
+++ b/src/containers/Header.css
@@ -1,4 +1,3 @@
-
 .App-logo {
     height: 70px;
     -webkit-animation: rotation 15s infinite linear;
@@ -6,19 +5,9 @@
     z-index: -100;
     /*display:inline-block;margin-right:10px;*/
 }
-/*@-webkit-keyframes rotation {
-    from {
-        -webkit-transform: rotate(0deg);
-       -webkit-transform-origin: 20% 20%;
-    }
-    to {
-        -webkit-transform: rotate(-359deg);
-        -webkit-transform-origin: 20% 20%;
-    }
-}*/
 
 .App-title {
-  font-size: 3em;
+  font-size: 48px;
   margin-top: 0px;
   /*color: gold;*/
   background: -webkit-linear-gradient(#ffd700, #c88f1f);
