--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -4,13 +4,39 @@ font-style: normal;
 font-weight: normal;
 src: local('osaka-re'), url('osaka-re.woff') format('woff');
 }
-
 .App {
   text-align: center;
 }
-
 h4{
   font-family: osaka-re;
 }
+.leftcolumn{
+  width: 30%;
+}
+.rightcolumn{
+  width: 65%;
+  display: inline-block;
+  text-align: center;
+  float: left;
+  padding: 0.5rem;
+  padding-left: 4rem;
+  background: #40865400;
+  border: 0px;
+}
 
+@media (max-width: 999px){
+  .leftcolumn{
+    width: 100%;
+    display: block;
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+  .rightcolumn{
+    width: 100%;
+    display: block;
+    text-align: center;
+    margin-bottom: 1rem;
+    padding: 0.5rem;
+  }
+}
 
