--- a/src/containers/Header.css
+++ b/src/containers/Header.css
@@ -1,14 +1,83 @@
-.App-logo {
-    height: 70px;
-    -webkit-animation: rotation 15s infinite linear;
-    z-index: -100;
+.wrap{
+  text-align: center;
+  float: left;
+  width: 100%;
+  padding: 2rem;
+  padding-bottom: 0.5rem;
 }
-
+.logocontainer{
+  float: left;
+  text-align: left;
+}
+.App-logo {
+  height: 70px;
+  -webkit-animation: rotation 15s infinite linear;
+  z-index: -100;
+  display: inline-block;
+  vertical-align: middle;
+}
 .App-title {
   font-size: 48px;
   margin-top: 0px;
   background: -webkit-linear-gradient(#ffd700, #c88f1f);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  display: inline-block;
+}
+.leftbox{
+  width: 60%;
+  float: left;
+}
+.rightbox{
+  width: 30%;
+  display: inline-block;
+  text-align: center;
+  float: left;
+  padding: 0.5rem;
+  padding-left: 4rem;
+  border-radius: 6px;
+  margin-left: 2rem;
+  border: solid 1px #abb7ae70 ;
+  padding: 25px 0px 25px 0px;
 }
 
+
+@media (max-width: 999px){
+  .logocontainer{
+    text-align: center;
+  }
+  .App-title {
+    font-size: 50px;
+    text-align: center;
+    margin: auto;
+  }
+  .App-logo {
+    display: none;
+  }
+  .leftbox{
+    width: 90%;
+    display: block;
+    text-align: center;
+    margin-left: 0.5rem;
+  }
+  .rightbox{
+    width: 90%;
+    display: block;
+    text-align: center;
+    margin-bottom: 1rem;
+    padding: 0.5rem;
+    border: 0;
+    background: #00ffff00;
+  }
+}
+@media only screen and (min-width: 1000px) and (max-width: 1125px){
+  .App-title {
+    font-size: 50px;
+    text-align: center;
+    margin: auto;
+    margin-bottom: 3rem;
+  }
+  .App-logo {
+    display: none;
+  }
+}
